libnm-glib/nm-dhcp4-config.c
@@ -174,6 +174,9 @@ nm_dhcp4_config_class_init (NMDHCP4ConfigClass *config_class)
 GObject *
 nm_dhcp4_config_new (DBusGConnection *connection, const char *object_path)
 {
+	g_return_val_if_fail (connection != NULL, NULL);
+	g_return_val_if_fail (object_path != NULL, NULL);
+
 	return (GObject *) g_object_new (NM_TYPE_DHCP4_CONFIG,
 	                                 NM_OBJECT_DBUS_CONNECTION, connection,
 	                                 NM_OBJECT_DBUS_PATH, object_path,
